Edit css and some text

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 						<li><a href="#about" class="scroll"><span>About</span></a></li>
 						<!--<li><a href="#experiences" class="scroll"><span></span></a></li>
 						<li><a href="#skills" class="scroll"><span></span></a></li> -->
-						<li><a href="#projects" class="scroll"><span>Gallary</span></a></li>
 						<li><a href="#contact" class="scroll"><span>Contact</span></a></li>
+						<li><a href="#projects" class="scroll"><span>Gallary</span></a></li>
 					</ul> 
 					<span aria-hidden="true" class="stretchy-nav-bg"></span>
 				</nav> 
@@ -235,15 +235,15 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 				<!---728x90--->
 
 				<div class="col-md-6 w3-about-grid-right1">
-					<h3>My self pravin dabhi a sofware engineer</h3>
+					<h3>My self dabhi pravin as a sofware engineer</h3>
 					<p>
 						<h4>Hobby:</h4>
-							<p>cricket,
-							music listening,
+							<p>Cricket,
+							Listening Music,
 							Traveling,
-							gym.</p>
-						<h4>height:</h4>
-							5'4'
+							GYM.</p>
+						<h4>Height:</h4>
+							5'4
 						<h4></h4>
 					</p>
 					<!--<h5>future goal to became bodybuilder</h5>-->
@@ -302,7 +302,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 					<h3>2017</h3>
 					<h4>web developer</h4>
 			</div>
-			<!--<div class="col-md-6 w3-edu-info2">
+			<div class="col-md-6 w3-edu-info2">
 				<h3>Ati software solution</h3>
 					<h4><i class="fa fa-users" aria-hidden="true"></i><span>Team leader</span></h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt a purus et vulputate </p>
