fixed email send and scroll issue

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 <!-- banner -->
 	<div class="w3-banner-top">
 	<div class="agileinfo-dot">
-			<div class="w3layouts_menu">
+			<div class="w3layouts_menu" id="home">
 				<nav class="cd-stretchy-nav edit-content">
 					<a class="cd-nav-trigger" href="#0"> Menu <span aria-hidden="true"></span> </a>
 					<ul>
@@ -200,7 +200,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 								<li>
 									<ul class="agileits-address-text">
 										<li class="agile-it-adress-left"><b>E-MAIL</b></li>
-										<li><span>:</span><a href="dabhipravin.dp12@mail.com"> dabhipravin.dp12@mail.com</a></li>
+										<li><span>:</span><a href="mailto:dabhipravin.dp12@gmail.com"> dabhipravin.dp12@gmail.com</a></li>
 									</ul>
 								</li>
 							</ul> 
@@ -490,7 +490,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 						<div class="jm-item-image">
 							<img src="images/dp6.jpg" alt="property" />
 							<span class="jm-item-overlay"> </span>
-							<div class="jm-item-button"><a href="#"  data-toggle="modal" data-target="#myModal5">View image</a></div>
+							<div class="jm-item-button"><a href="#"  data-toggle="modal" data-target="#myModal6">View image</a></div>
 						</div>
 						
 					</div>
@@ -787,7 +787,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 						</div>
 						<div class="w3ls_footer_grid_leftr">
 							<h4>Location</h4>
-							<p>Khodu Gujarat</p>
+							<a href="https://www.google.com/maps/place/Khodu,+Gujarat+363040/@22.8628169,71.4014177,47021m/data=!3m1!1e3!4m5!3m4!1s0x395968d389861ee1:0x2e6ed3838e3b4ed6!8m2!3d22.7871503!4d71.4893013?hl=en-IN">khodu Gujarat</a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -797,7 +797,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 						</div>
 						<div class="w3ls_footer_grid_leftr">
 							<h4>Email</h4>
-							<a href="dabhiprvin.dp12@gmail.com">dabhiprvin.dp12@gmail.com</a>
+							<a href="mailto:dabhipravin.dp12@gmail.com">dabhipravin.dp12@gmail.com</a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
