info update and image change

--- a/index.html
+++ b/index.html
@@ -157,20 +157,32 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Father</b></li>
+										<li class="agile-it-adress-left"><b>Father's Name</b></li>
 										<li><span>:</span>Dabhi Ranchhodbhai Shamajibhai</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Mother</b></li>
+										<li class="agile-it-adress-left"><b>Mother's Name</b></li>
 										<li><span>:</span>Dabhi Ranjanben Ranchhodbhai</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Occupation</b></li>
+										<li class="agile-it-adress-left"><b>Father's Occupation</b></li>
 										<li><span>:</span>Farmer</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text">
+										<li class="agile-it-adress-left"><b>Occupation</b></li>
+										<li><span>:</span>Software Engineer</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text">
+										<li class="agile-it-adress-left"><b>Qualification</b></li>
+										<li><span>:</span>B.E.(Compueter Engineering)</li>
 									</ul>
 								</li>
 								<li>
@@ -235,7 +247,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 				<!---728x90--->
 
 				<div class="col-md-6 w3-about-grid-right1">
-					<h3>My self dabhi pravin as a sofware engineer</h3>
+					<h3>My self dabhi pravin as a software engineer</h3>
 					<p>
 						<h4>Hobby:</h4>
 							<p>Cricket,
@@ -268,7 +280,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 				<div class="w3-about-grids2">
 				<div class="col-md-6 w3-about-grid-left2">
 					<h3>Dabhi Pravin</h3>
-					<p> Student at Government Engineering Collage Modasa.
+					<p> Assosiate Software Engineer at Tntra.
 						Hardworking,punctual and keen learner.
 						Always ready to learn new things.
 						want to became good developer.
@@ -450,7 +462,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 				<div class="col-md-4 col-ms-6 jm-item first filtr-item" data-category="2, 5" data-sort="Luminous night" style="opacity: 1; transform: scale(1) translate3d(380px, 0px, 0px); backface-visibility: hidden; perspective: 1000px; transform-style: preserve-3d; position: absolute; transition: all 0.5s ease-out 0ms;">
 					<div class="jm-item-wrapper">
 						<div class="jm-item-image">
-							<img src="images/dp2.jpg" alt="property" />
+							<img src="images/dp3.jpg" alt="property" />
 							<span class="jm-item-overlay"> </span>
 							<div class="jm-item-button"><a href="#"  data-toggle="modal" data-target="#myModal2">View image</a></div>
 						</div>	
@@ -579,7 +591,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 							<!-- Modal content-->
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
 							<div class=" w3ls-property-images w3-pop1-img2">
-							<img src="images/dp2.jpg" alt="image">
+							<img src="images/dp3.jpg" alt="image">
 							</div>
 					
 						<div class=" ins-details">
