--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Occupation</b></li>
-										<li><span>:</span>Software Engineer</li>
+										<li class="agile-it-adress-left"><b>Educational Qualification</b></li>
+										<li><span>:</span>B.E. Compueter Science</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Qualification</b></li>
-										<li><span>:</span>B.E.(Compueter Engineering)</li>
+										<li class="agile-it-adress-left"><b>Occupation</b></li>
+										<li><span>:</span>Software Developer</li>
 									</ul>
 								</li>
 								<li>
