--- a/index.html
+++ b/index.html
@@ -275,10 +275,12 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 					<div class="col-md-4">
 						<h3 class="w3-head-project">Skills</h3>
 						<br>
-						<p>Python,</p>
-						<p>Django,</p>
-						<p>Django Rest Framework,</p>
-						<p>Basic ReactJs</p>
+						<ul style=" list-style-type: square;">
+							<li><p>Python</p></li>
+							<li><p>Django</p></li>
+							<li><p>Django Rest Framework</p></li>
+							<li><p>Basic ReactJs</p></li>
+						</ul>
 					</div>
 		
 				</div>
@@ -438,7 +440,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 				<div class="col-md-4 col-ms-6 jm-item first filtr-item" data-category="1, 3" data-sort="In production" style="opacity: 1; transform: scale(1) translate3d(0px, 286px, 0px); backface-visibility: hidden; perspective: 1000px; transform-style: preserve-3d; position: absolute; transition: all 0.5s ease-out 0ms;">
 					<div class="jm-item-wrapper">
 						<div class="jm-item-image">
-							<img src="images/dp13.jpg" alt="property" />
+							<img src="images/dp16.jpg" alt="property" />
 							<span class="jm-item-overlay"> </span>
 							<div class="jm-item-button"><a href="#"  data-toggle="modal" data-target="#myModal4">View image</a></div>
 						</div>	
@@ -589,7 +591,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 							<!-- Modal content-->
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
 							<div class=" w3ls-property-images w3-pop1-img4">
-							<img src="images/dp13.jpg" alt="image">
+							<img src="images/dp16.jpg" alt="image">
 							</div>
 					
 						<div class=" ins-details">
