add some information about company

--- a/index.html
+++ b/index.html
@@ -156,6 +156,36 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 									</ul>
 								</li>
 								<li>
+									<ul class="agileits-address-text ">
+										<li class="agile-it-adress-left"><b>Height</b></li>
+										<li><span>:</span>5'6''</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text ">
+										<li class="agile-it-adress-left"><b>Weight</b></li>
+										<li><span>:</span>71 Kg</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text ">
+										<li class="agile-it-adress-left"><b>Annual Income</b></li>
+										<li><span>:</span>7 Lakhs</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text">
+										<li class="agile-it-adress-left"><b>Educational Qualification</b></li>
+										<li><span>:</span>B.E.(Compueter Engineer)</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text">
+										<li class="agile-it-adress-left"><b>Occupation</b></li>
+										<li><span>:</span>Software Engineer(Python Developer)</li>
+									</ul>
+								</li>
+								<li>
 									<ul class="agileits-address-text">
 										<li class="agile-it-adress-left"><b>Father's Name</b></li>
 										<li><span>:</span>Dabhi Ranchhodbhai Shamajibhai</li>
@@ -171,18 +201,6 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 									<ul class="agileits-address-text">
 										<li class="agile-it-adress-left"><b>Father's Occupation</b></li>
 										<li><span>:</span>Farmer</li>
-									</ul>
-								</li>
-								<li>
-									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Educational Qualification</b></li>
-										<li><span>:</span>B.E.(Compueter Engineer)</li>
-									</ul>
-								</li>
-								<li>
-									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>Occupation</b></li>
-										<li><span>:</span>Software Developer (Python Developer)</li>
 									</ul>
 								</li>
 								<li>
@@ -247,7 +265,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
 				<div class="col-md-6 w3-about-grid-right1">
 					<h3>Pravin Dabhi</h3>
 					
-					<p>I am a kind-hearted, simple person living in Surendranagar(Khodu), qualified as a computer engineer & completed a study of bachelor of engineering(B.E.). I am working as a Software engineer at <a href="https://www.tntra.io">Tntra</a>  in Ahmedabad. I have interests in reading, watching new movies, traveling to new places, and listening to music.     I am a strong believer in equality amongst all of us and one can make this world a better place through a small act of kindness.
+					<p>I am a kind-hearted, simple person living in Surendranagar(Khodu), qualified as a computer engineer & completed a study of bachelor of engineering(B.E.). I am working as a Software engineer at <a href="https://www.tcs.com/">Tata Cunsultancy Services(TCS)</a>  in Gandhinagar. I have interests in reading, watching new movies, traveling to new places, and listening to music.     I am a strong believer in equality amongst all of us and one can make this world a better place through a small act of kindness.
 					
 					</p>
 					<!--<h5>future goal to became bodybuilder</h5>-->
